2001-02-14  Christophe Merlet  <redfox@eikonex.org>

	* session-properties.c: Marqued string for translation.

Tue Feb 13 23:41:58 2001  George Lebl <jirka@5z.com>

	* splash.c: use the windowmanager icon for sawfihs, not sawfish.png,
	  until there is a nice sawfish icon

Tue Feb 13 21:57:18 2001  George Lebl <jirka@5z.com>

	* session-properties-capplet.c:  Save splash setting under the correct
	  key

	* splash.c: splash bugfixing galore.  Add nautilus to list of
	  programs we know.  Fix possible crashes related to bad timeout
	  removal.  Don't run icon_cb if not needed.  Fix possible races
	  on destruction.  Make sure the scalefactor is in a reasonable level
	  so we don't crash on rediculous splash screen images.  Rescale
	  icons when they go out of bounds.  Use "fontset" and not "font"
	  for text, and mark fontname for translation.  Should fix any
	  remaining "splash screen segfaults" bugs on bugzilla.

Fri Feb 9 2001 Glynn Foster <glynn.foster@sun.com>
	* save.c (set_session_name): Set the current session
	* gsm-protocol.c (gsm_protocol_set_session_name): Check *name
	  for non-NULL
	* session-properties-capplet.c (write_state): Remove config
	  code to set CurrentSession in ~/.gnome/session-options since
	  code in set_session_name (above) does this

Thurs Feb 8 2001 Glynn Foster <glynn.foster@sun.com>
	* session-properties-capplet.c (capplet_build): Just fixed up a 
	  few Gtk-CRITICAL Warnings for the capplet code.

2001-01-28  John Harper  <jsh@eazel.com>

	* manager.c (interact_done): if the shutdown is cancelled, send
	SmsShutdownCancelled message to clients in the
	save_finished_list as well as those in the save_yourself_list
	and the save_yourself_p2_list (otherwise these clients will
	hang waiting for this or SaveComplete)

Mon Feb 5 2001 Glynn Foster <glynn.foster@sun.com>
	
	* Some gsm loving - just a quick cleanup, added headers 
		* headers.h, logout.h, save.h, ice.h, prop.h
 		  remote.h, command.h	