@@ -1,3 +1,11 @@
+2001-02-14  jacob berkman  <jacob@ximian.com>
+
+	* save.c (read_session): if we are choosing a session, also look
+	in the default file for it.
+
+	* session-properties-capplet.c (capplet_build): default to the
+	default session
+
 2001-02-14  Christophe Merlet  <redfox@eikonex.org>
 
 	* session-properties.c: Marqued string for translation.
